# Rend

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .env.production.example  .gitignore  .vercelignore  Caddyfile.selfhost  Cargo.toml  Dockerfile  README.md  compose.selfhost.yml  compose.yml  package.json  turbo.json
.github/workflows/: deploy-aws.yml  publish-selfhost.yml  purge-edge-playback-cache.yml  release-deploy.yml  verify-aws-production.yml
apps/site/: AGENTS.md  README.md  next-config.test.mts  next.config.ts  package.json  proxy.ts
apps/site/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/site/app/about/: opengraph-image.tsx  page.tsx
apps/site/app/benchmarks/: opengraph-image.tsx  page.tsx
apps/site/app/compare/: page.tsx  twitter-image.tsx
apps/site/app/dashboard/: layout.tsx  page.tsx
apps/site/app/docs/: docs-content.ts  page.tsx
apps/site/app/embed-fast/: route.test.mts
apps/site/app/features/: opengraph-image.tsx  page.tsx
apps/site/app/llms-full.txt/: route.ts
apps/site/app/llms.txt/: route.ts
apps/site/app/login/: page.tsx
apps/site/app/onboarding/: page.tsx
apps/site/app/openapi.json/: route.ts
apps/site/app/operator/: page.tsx
apps/site/app/performance/: page.tsx  twitter-image.tsx
apps/site/app/pricing/: opengraph-image.tsx  page.tsx
apps/site/app/privacy/: page.tsx
apps/site/app/terms/: page.tsx
apps/site/components/: AnalyticsClient.tsx  ApiKeysClient.tsx  AssetDetailClient.tsx  AssetsClient.tsx  BillingPlansClient.tsx  DocsCommandPalette.tsx  DocsCopyButton.tsx  DocsSidebarNav.tsx  Effects.tsx  EmbedCustomizer.tsx  LoginForm.tsx  OnboardingClient.tsx  copy-text.ts
apps/site/lib/: agent-readiness.ts  api-key-types.ts  api-keys.test.mts  api-keys.ts  asset-api.test.mts  asset-api.ts  asset-lifecycle.test.mts  asset-lifecycle.ts  asset-routes.test.mts  asset-types.ts  auth-cli.ts  auth-client.ts  auth-errors.ts  auth-events.ts  auth-seed.ts  auth.test.mts  auth.ts  billing-usage.test.mts  billing-usage.ts  billing.test.mts  billing.ts  dashboard-auth-hint.test.mts  dashboard-auth-hint.ts  dashboard-auth-next.ts  dashboard-auth.test.mts  dashboard-auth.ts  dashboard-state.ts  dashboard-upload-token.test.mts  dashboard-upload-token.ts  docs-content.test.mts  legal-assent-constants.ts  legal-assent.ts  marketing-pages.ts  og.tsx  onboarding.test.mts  onboarding.ts  operator.test.mts  operator.ts  player-artifact-proxy.test.mts  player-artifact-proxy.ts  (+22 more)
clickhouse/: 001_playback_events.sql  002_customer_analytics.sql  003_acquisition_channels.sql  004_cloudfront_requests.sql  005_player_delivery_dimensions.sql  backup-disk.xml
crates/rend-config/: Cargo.toml
crates/rend-config/src/: lib.rs
crates/rend-playback-auth/: Cargo.toml
crates/rend-playback-auth/src/: lib.rs
docs/: billing-autumn-v1.md  deployment-automation.md  deployment-aws.md  deployment-v1.md  edge-host-runbook-v1.md  launch-gate-v1.md  release-images-v1.md  rend-playback-edge-v1-plan.md
docs/env/: profiles.md  rend-api.env.example  rend-edge-london.env.example  rend-edge-us-east.env.example  rend-media-worker.env.example
docs/openapi/: rend-public-api.openapi.json
docs/releases/: README.md
docs/templates/: control-plane-upstream.Caddyfile  control-plane.Caddyfile  control-plane.compose.yml  edge-host.Caddyfile  edge-host.compose.yml
infra/aws/: README.md
infra/aws/bootstrap/: main.tf  outputs.tf  variables.tf
infra/aws/environments/: production.tfvars.example
infra/aws/platform/: analytics.tf  clickhouse-user-data.sh.tftpl  compute.tf  delivery.tf  iam.tf  locals.tf  network.tf  observability.tf  outputs.tf  providers.tf  retired_cloudfront.tf  storage.tf  variables.tf  versions.tf
infra/aws/scripts/: cleanup-retired-cloudfront.sh  provision-tigris.sh
migrations/: 0001_foundation.sql  0002_asset_events.sql  0003_asset_event_type_underscores.sql  0004_media_jobs.sql  0005_edge_nodes_active_fanout_idx.sql  0006_auth_org_api_keys.sql  0007_suspension_audit.sql  0008_billing_autumn.sql  0009_billing_usage_events_pre_asset_reservations.sql  0010_resolution_tiered_billing.sql  0011_billing_storage_spans.sql  0012_auth_verification_identifier_unique.sql  0013_organization_onboarding_backfill.sql  0014_scalable_media_pipeline.sql  0015_media_compute_reservation_month.sql  0016_immutable_artifact_storage.sql  0017_cloudfront_invalidation_queue.sql  0018_origin_cleanup_queue.sql  0019_simplify_billing_storage_spans.sql
scripts/: auth-otp-diagnostics.mjs  autumn-catalog-parity.mjs  backfill-public-playback-aliases.mjs  benchmark-local-playback.sh  benchmark-providers.mjs  bootstrap-control-plane-host-files.sh  check-docker-image-versions.sh  deploy-control-plane-host.sh  deploy-edge-host.sh  deploy-release-over-ssh.sh  docker-smoke-common.sh  docker-smoke.sh  docker-two-edge-smoke.sh  e2e-player-telemetry.mjs  e2e-site-assets.mjs  env-policy.mjs  generate-fixture-video.sh  generate-openapi-client.mjs  inspect-docker-release.sh  launch-gate.mjs  lint-openapi.mjs  operator-common.sh  playback-readiness-gate.mjs  preflight-control-plane-host.sh  preflight-edge-host.sh  production-dry-run.mjs  production-sdk-e2e.mjs  quarantine-telemetry-spool-lines.sh  release-images.sh  run-daytona-provider-benchmark.mjs  run-prod-hls-provider-benchmark.mjs  run-prod-tigris-vs-edge-benchmark.mjs  sdk-integration-smoke.mjs  self-serve-readiness.mjs  selfhost.sh  setup-autumn-billing.mjs  smoke-asset-events.sh  smoke-async-media.sh  smoke-aws-public.mjs  smoke-billing-denial.mjs  (+20 more)
scripts/openapi/: schema-validator.mjs
services/rend-api/: Cargo.toml
services/rend-api/src/: billing.rs  budget.rs  cloudfront_invalidations.rs  events.rs  jobs.rs  main.rs  media.rs  origin_cleanup.rs  player_harness.html  telemetry.rs  tests.rs  uploads.rs
services/rend-edge/: Cargo.toml
services/rend-edge/src/: main.rs  telemetry.rs  tests.rs
site/: README.md  package-lock.json
site/app/: globals.css  layout.tsx  page.tsx
site/components/: Effects.tsx  WaitlistForm.tsx
site/lib/: og.tsx
(+107 files in other folders)
