[workspace]
members = [
  "crates/rend-config",
  "services/rend-api",
  "services/rend-edge",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
aws-sdk-s3 = "1.136.0"
axum = { version = "0.8.7", features = ["macros"] }
bytes = "1.11.0"
dotenvy = "0.15.7"
http-body = "1.0.1"
redis = { version = "0.32.7", default-features = false, features = ["tokio-comp"] }
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls"] }
rend-config = { path = "crates/rend-config" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6.7", features = ["timeout", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
