[workspace]
members = [
  "crates/rend-config",
  "crates/rend-playback-auth",
  "services/rend-api",
  "services/rend-edge",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
aws-config = { version = "=1.8.13", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-cloudfront = "=1.123.0"
aws-sdk-s3 = "=1.136.0"
axum = { version = "0.8.7", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
hmac = "0.12.1"
lru = "0.16.4"
http-body = "1.0.1"
http-body-util = "0.1.3"
fs2 = "0.4.3"
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls"] }
rend-config = { path = "crates/rend-config" }
rend-playback-auth = { path = "crates/rend-playback-auth" }
rsa = { version = "0.9.10", features = ["pem"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = { version = "0.10.6", features = ["oid"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "timeout", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
url = "2.5.7"
