[package]
name = "rend-api"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
aws-sdk-s3.workspace = true
axum.workspace = true
bytes.workspace = true
http-body.workspace = true
redis.workspace = true
rend-config.workspace = true
rend-playback-auth.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
