[package]
name = "rend-edge"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
aws-sdk-s3.workspace = true
axum.workspace = true
chrono.workspace = true
fs2.workspace = true
rend-config.workspace = true
rend-playback-auth.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower.workspace = true
